# redragon-streamdeck-linux-

./: .gitignore  CLAUDE.md  INSTALL_ARCH.md  LICENSE  README.md  config.example.json  install-fedora.sh  install-linux.sh  install-ubuntu.sh  install.sh  package-lock.json  package.json  uninstall.sh  ydotoold.service
public/: app-tauri.js  app.js  index-tauri.html  index-web.html  index.html  style.css
src/: server.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
