[package]
name = "redragon-streamdeck"
version = "2.0.0"
description = "Redragon Stream Deck Manager - Desktop App"
authors = ["Tecnodespegue"]
license = "MIT"
repository = "https://github.com/Rene-Kuhm/redragon-streamdeck-linux-"
edition = "2021"

[lib]
name = "redragon_streamdeck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusb = "0.9"
image = "0.25"
imageproc = "0.25"
rusttype = "0.9"
tokio = { version = "1", features = ["full"] }
dirs = "6"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
